packages/typ/tests/fixtures/diagnostics/0928_gadt_local_abstract_return_mismatch_07.ml.expected
File "0928_gadt_local_abstract_return_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0928_gadt_local_abstract_return_mismatch_07 is not a valid module name.

File "0928_gadt_local_abstract_return_mismatch_07.ml", line 9, characters 19-20:
9 |     | WBool_eta -> x
                       ^
Error: The value x has type a = bool but an expression was expected of type
         int
